--- a/app-react/package.json
+++ b/app-react/package.json
@@ -10,7 +10,7 @@
     "build": "expo export --platform web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "expo": "^52.0.44",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
