Chore: Checkout explicite de la branche main dans le workflow infra

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: main # Explicitly checkout the main branch
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
