Remplacement de GITHUB_TOKEN par GH_PAT dans les workflows et mise à jour de la documentation des secrets

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -68,7 +68,8 @@ jobs:
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
-            -var="github_token=${{ secrets.GITHUB_TOKEN }}" \
+            # Utilise GH_PAT au lieu de GITHUB_TOKEN (les noms de secrets ne doivent pas commencer par GITHUB_)
+            -var="github_token=${{ secrets.GH_PAT }}" \
             -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
             -var="repo_name=${{ github.event.inputs.repo_name }}" \
             -no-color \
@@ -90,7 +91,8 @@ jobs:
             -var="db_username=${{ secrets.DB_USERNAME }}" \
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
-            -var="github_token=${{ secrets.GITHUB_TOKEN }}" \
+            # Utilise GH_PAT au lieu de GITHUB_TOKEN (les noms de secrets ne doivent pas commencer par GITHUB_)
+            -var="github_token=${{ secrets.GH_PAT }}" \
             -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
             -var="repo_name=${{ github.event.inputs.repo_name }}"
         continue-on-error: false
