--- a/.github/workflows/4-frontend-deploy.yml
+++ b/.github/workflows/4-frontend-deploy.yml
@@ -1,11 +1,24 @@
 name: 4 - Build Frontend (React Native Web CI)
 
+# -----------------------------------------------------------------------
+# Ce workflow gère la vérification de l'application frontend React Native Web.
+# Il s'exécute automatiquement à chaque push sur la branche main qui modifie
+# le code frontend, ou peut être déclenché manuellement.
+# Note: Le déploiement réel est géré par AWS Amplify via la connexion au repo.
+# -----------------------------------------------------------------------
+
 on:
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch: # Permet le déclenchement manuel
   push:
-    branches: [ main ] # Trigger on push to main branch (for CI check)
+    branches: [ main ] # Déclenche sur push vers la branche main (pour vérification CI)
     paths:
-      - 'app-react/**' # Only run if frontend code changes
+      - 'app-react/**' # S'exécute uniquement si le code frontend change
+
+# Variables d'environnement globales
+env:
+  NODE_VERSION: '18'     # Version de Node.js à utiliser
+  PACKAGE_MANAGER: 'npm' # Gestionnaire de paquets (npm ou yarn)
+  APP_DIR: ./app-react   # Répertoire de l'application React
 
 jobs:
   build:
@@ -13,26 +26,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Étape 1: Récupération du code source
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Récupère tout l'historique pour les tags
 
-      - name: Set up Node.js
+      # Étape 2: Configuration de Node.js
+      - name: Set up Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # Ou une version LTS récente compatible avec Expo
-          cache: 'npm' # Ou 'yarn' si vous utilisez yarn
+          node-version: ${{ env.NODE_VERSION }}
+          cache: ${{ env.PACKAGE_MANAGER }}
 
+      # Étape 3: Installation des dépendances
       - name: Install dependencies
-        run: npm install # Ou yarn install
-        working-directory: ./app-react
+        run: |
+          echo "::group::Installing dependencies"
+          ${{ env.PACKAGE_MANAGER }} install
+          echo "::endgroup::"
+        working-directory: ${{ env.APP_DIR }}
 
-      - name: Build web application (Expo Export)
-        # Le build est juste pour vérifier que ça fonctionne en CI.
-        # Le déploiement réel est géré par AWS Amplify via la connexion au repo.
-        run: npm run build # Ou yarn run build (qui exécute 'expo export --platform web')
-        working-directory: ./app-react
+      # Étape 4: Compilation de l'application web (Expo Export)
+      - name: Build web application
+        run: |
+          echo "::group::Building web application"
+          ${{ env.PACKAGE_MANAGER }} run build
+          echo "::endgroup::"
+        working-directory: ${{ env.APP_DIR }}
 
-      # Optionnel: Ajouter ici des étapes de linting ou de test si nécessaire
-      # - name: Run linter
-      #   run: npm run lint # Ou yarn lint
-      #   working-directory: ./app-react
+      # Étape 5 (optionnelle): Linting et tests
+      # - name: Run linter and tests
+      #   run: |
+      #     echo "::group::Linting and testing"
+      #     ${{ env.PACKAGE_MANAGER }} run lint
+      #     ${{ env.PACKAGE_MANAGER }} test
+      #     echo "::endgroup::"
+      #   working-directory: ${{ env.APP_DIR }}
+
+      # Étape 6: Résumé de la compilation
+      - name: Summary
+        run: |
+          echo "## Résumé de la compilation Frontend" >> $GITHUB_STEP_SUMMARY
+          echo "* **Application:** Frontend React Native Web" >> $GITHUB_STEP_SUMMARY
+          echo "* **Branche:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "* **Déclencheur:** ${{ github.event_name == 'workflow_dispatch' && 'Manuel' || 'Push' }}" >> $GITHUB_STEP_SUMMARY
+          echo "* **Statut:** Compilation réussie ✅" >> $GITHUB_STEP_SUMMARY
+          echo "* **Note:** Le déploiement est géré automatiquement par AWS Amplify" >> $GITHUB_STEP_SUMMARY
