--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -42,6 +42,7 @@ jobs:
   plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
+    environment: approval # Environnement avec protection d'approbation
     defaults:
       run:
         working-directory: ${{ env.TF_WORKING_DIR }}
@@ -127,7 +128,7 @@ jobs:
     needs: plan
     if: github.event.inputs.action == 'apply' || github.event.inputs.action == 'destroy'
     runs-on: ubuntu-latest
-    environment: production  # Environnement avec protection d'approbation
+    environment: approval  # Environnement avec protection d'approbation
 
     steps:
       - name: Approbation requise
@@ -142,6 +143,7 @@ jobs:
     needs: approve
     if: github.event.inputs.action == 'apply'
     runs-on: ubuntu-latest
+    environment: approval  # Environnement avec protection d'approbation
     defaults:
       run:
         working-directory: ${{ env.TF_WORKING_DIR }}
@@ -203,6 +205,7 @@ jobs:
     needs: approve
     if: github.event.inputs.action == 'destroy'
     runs-on: ubuntu-latest
+    environment: approval  # Environnement avec protection d'approbation
     defaults:
       run:
         working-directory: ${{ env.TF_WORKING_DIR }}
