Simplification du workflow en utilisant les variables d'environnement GitHub Actions au lieu de demander le propriétaire et le nom du repo

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -23,14 +23,7 @@ on:
         description: 'Nom de la paire de clés EC2 existante dans AWS pour SSH'
         required: true
         type: string
-      repo_owner:
-        description: 'Propriétaire du repo GitHub (utilisateur ou organisation)'
-        required: true
-        type: string
-      repo_name:
-        description: 'Nom du repo GitHub'
-        required: true
-        type: string
+
 
 # Variables d'environnement globales
 env:
@@ -97,8 +90,8 @@ jobs:
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
-            -var="repo_name=${{ github.event.inputs.repo_name }}" \
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}" \
             -no-color \
             -out=tfplan
           echo "::endgroup::"
@@ -245,8 +238,8 @@ jobs:
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ github.event.inputs.ssh_key_pair_name }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
-            -var="repo_name=${{ github.event.inputs.repo_name }}"
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}"
           echo "::endgroup::"
 
       # Étape 6: Résumé de la destruction
