Correction des incohérences dans les variables et le workflow GitHub Actions

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -21,14 +21,7 @@ on:
           - apply    # Appliquer les changements à l'infrastructure
           - destroy  # Détruire l'infrastructure existante
 
-      repo_owner:
-        description: 'Propriétaire du repo GitHub (utilisateur ou organisation)'
-        required: true
-        type: string
-      repo_name:
-        description: 'Nom du repo GitHub'
-        required: true
-        type: string
+
 
 # Variables d'environnement globales
 env:
@@ -93,8 +86,8 @@ jobs:
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
-            -var="repo_name=${{ github.event.inputs.repo_name }}" \
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}" \
             -no-color \
             -out=tfplan
           echo "::endgroup::"
@@ -125,8 +118,8 @@ jobs:
             -var="db_password=${{ secrets.DB_PASSWORD }}" \
             -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
             -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.event.inputs.repo_owner }}" \
-            -var="repo_name=${{ github.event.inputs.repo_name }}"
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}"
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si la destruction échoue
 
