--- a/.github/workflows/3-backend-deploy.yml
+++ b/.github/workflows/3-backend-deploy.yml
@@ -10,11 +10,11 @@ on:
   workflow_dispatch:
     inputs:
       ec2_public_ip:
-        description: "Adresse IP publique de l'instance EC2 (depuis les outputs Terraform)"
+        description: 'Adresse IP publique de l\'instance EC2 (depuis les outputs Terraform)'
         required: true
         type: string
       s3_bucket_name:
-        description: "Nom du bucket S3 (depuis les outputs Terraform)"
+        description: 'Nom du bucket S3 (depuis les outputs Terraform)'
         required: true
         type: string
 
